# FormulaRecognizer

./: .gitignore  CMakeLists.txt  README.md
dataset/: CMakeLists.txt
dataset/src/: dataset.cpp  dataset.h  datasetbuilder.cpp  datasetbuilder.h  imageviewer.cpp  imageviewer.h
dataset_builder/: CMakeLists.txt  test.dst
dataset_builder/src/: datasetbuilder.cpp  datasetbuilder.h  main.cpp
include/: recognizer.h
include/dataset/: dataset.h
include/neural_network/: matrix.h
include/segmenter/: formula.h  rect.h
src/: main.cpp  recognizer.cpp
src/dataset/: dataset.cpp
src/neural_network/: matrix.cpp
src/segmenter/: formula.cpp  formula.h  rect.cpp  rect.h
src/symbol_slicer/: formula.cpp  formula.h  rect.cpp  rect.h  slicer.cpp  slicer.h
